fix: issue #4690: html element with overflow-y auto instead of scroll css

--- a/frontend/src/styles/core.scss
+++ b/frontend/src/styles/core.scss
@@ -71,7 +71,7 @@
 
 html {
   @extend .ffscroll;
-  overflow-y: scroll;
+  overflow-y: auto;
   scroll-behavior: smooth;
   line-height: 1.25;
 }
